--- a/src/app/store/cartSummery.component.html
+++ b/src/app/store/cartSummery.component.html
@@ -15,7 +15,7 @@
                 <div class="inline-block__size ">
                     <div class="inline-block ">
                         <div class="size ">
-                            <span>Size:U</span>
+                            <span>Size:{{cartItem.ProductSize}}</span>
                         </div>
                     </div>
                     <div class="inline-block ">
