--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -80,10 +80,13 @@
                             <swiper [config]="allCatConfig" [(index)]="index">
                                 <div class=" new-arrival__banner-detail " *ngFor="let prod of products; let i = index">
                                     <div class="relate">
-                                        <img [src]="prod.ProductImg" alt="" class="img-responsive">
-                                        <div class="featured__icon-cart">
+                                        <a  [routerLink]="['/individualProduct', prod.ProductId]">
+
+                                            <img [src]="prod.ProductImg" alt="" class="img-responsive">
+                                        </a>
+                                        <!-- <div class="featured__icon-cart">
                                            <a (click)="addToCart(prod.ProductId, prod.ProductPrice)"><i class="fa fa-shopping-cart"></i></a> 
-                                        </div>
+                                        </div> -->
                                         <div class="featured__icon-heart">
                                             <i aria-hidden="true"></i>
                                         </div>
@@ -122,13 +125,15 @@
                             <swiper [config]="newCatConfig" [(index)]="index">
                                 <div class=" new-arrival__banner-detail " *ngFor="let newCat of newArrivalProducts">
                                     <div class="relate">
-                                        <img [src]="newCat.ProductImg" alt="" class="img-responsive">
-                                        <div class="featured__icon-cart">
+                                        <a  [routerLink]="['/individualProduct', newCat.ProductId]">
+                                            <img [src]="newCat.ProductImg" alt="" class="img-responsive">
+                                        </a>
+                                        <!-- <div class="featured__icon-cart">
                                             <i class="fa fa-shopping-cart"></i>
                                         </div>
                                         <div class="featured__icon-heart">
                                             <i aria-hidden="true"></i>
-                                        </div>
+                                        </div> -->
                                     </div>
                                     <div class="get-left">
                                         <h3 class="homepg-slider-product-cost"><i class="fa fa-inr"
