--- a/src/app/store/cart.component.html
+++ b/src/app/store/cart.component.html
@@ -133,7 +133,7 @@
                 <div class="clearfix"></div>
                 <div class="pull-right margin-15">
                     <button class="btn text-uppercase shop--btn " routerLink="/store">Continue shopping</button>
-                    <button class="btn text-uppercase checkout--btn">checkout</button>
+                    <button class="btn text-uppercase checkout--btn" (click)="placeOrder()">checkout</button>
                 </div>
             </div>
         </div>
